syntax = "proto3";

package common;

option csharp_namespace = "ShopifyClone.ProtoCs.Common.Types";

enum SubscriptionType
{
    SUBSCRIPTION_TYPE_STANDARD = 0;
    SUBSCRIPTION_TYPE_TEAM = 1;
    SUBSCRIPTION_TYPE_BUSINESS = 2;
}

enum SubscriptionStatus
{
    SUBSCRIPTION_STATUS_INACTIVE = 0;
    SUBSCRIPTION_STATUS_PENDING_PAYMENT = 1;
    SUBSCRIPTION_STATUS_ACTIVE = 2;
    SUBSCRIPTION_STATUS_CANCELED = 3;
}

enum CreationStatus
{
    CREATION_STATUS_NOT_STARTED = 0;
    CREATION_STATUS_IN_PROGRESS = 1;
    CREATION_STATUS_SUCCEEDED = 2;
    CREATION_STATUS_FAILED = 3;
}

message PaginationResponse {
    int64 total_results = 1;
    int32 page_size = 2;
    int32 page_index = 3;
    int32 max_page_index = 4;
}

message PaginationRequest {
    int32 page_size = 1;
    int32 page_index = 2;
}

enum ActiveStatus {
    ACTIVE_STATUS_UNSPECIFIED = 0;
    ACTIVE_STATUS_ACTIVE = 1;
    ACTIVE_STATUS_INACTIVE = 2;
}